@@ -1,5 +1,8 @@
 CHANGES IN FLTK 1.1.6
 
+	- Documentation updates (STR #608)
+	- FLUID didn't handle default function parameters
+	  properly (STR #579)
 	- Moving or resizing widgets in FLUID didn't always
 	  update the widget panel (STR #600)
 	- FLTK windows could appear off-screen on X11 (STR #586)
